--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -28,3 +28,4 @@ include ":app"
 
 include ":unityLibrary"
 project(":unityLibrary").projectDir = file("./unityLibrary")
+include ":unityLibrary:xrmanifest.androidlib"
