--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,11 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_unity_widget:
-    git:
-      url: https://github.com/juicycleff/flutter-unity-view-widget.git
-      ref: master # branch name or commit hash
-      # UPDATE: this fix is now included in the master branch
-      # ref: flutter_3.24_android_hotfix
+    path: /Users/a-kun/uaal_flutter_324/.local-plugins/flutter-unity-view-widget
   pointer_interceptor: ^0.9.3+2
 
 dev_dependencies:
