--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -7,7 +7,7 @@ plugins {
 
 // flutter. variables commented for backwards compatibility with Flutter 3.16 and 3.19.
 android {
-    namespace = "com.xraph.plugin.flutter_unity_widget_example"
+    namespace = "com.example.uaal_flutter_324"
     compileSdk = 34 // flutter.compileSdkVersion
     // ndkVersion = flutter.ndkVersion
 
@@ -22,7 +22,7 @@ android {
     }
 
     defaultConfig {
-        applicationId = "com.xraph.plugin.flutter_unity_widget_example"
+        applicationId = "com.example.uaal_flutter_324"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = 33 // flutter.minSdkVersion
