--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_unity_widget_example
+name: uaal_flutter_324
 description: Demonstrates how to use the flutter_unity_widget plugin.
 
 # The following line prevents the package from being accidentally published to
